# SPHousePricePredictionAPP

./: README.md
ml/: 0_initial_pre_processing.ipynb  1_exploratory_data_analysis_and_preprocessing.ipynb  exploratory-data-analysis.ipynb  initial_pre_processing.ipynb  pyproject.toml
