[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
notebook = "^7.2.1"
numpy = "^2.0.1"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
seaborn = "^0.13.2"
kaggle = "^1.6.17"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
rope = "^1.13.0"
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
